Fix a crash when using "shrink" deform brush

BUG:408887