plugins/paintops/deform/deform_brush.h
@@ -24,6 +24,7 @@
 
 #include <kis_brush_size_option.h>
 #include <kis_deform_option.h>
+#include "kis_algebra_2d.h"
 
 #include <time.h>
 
@@ -72,7 +73,7 @@ public:
         return m_factor;
     }
     void transform(qreal* x, qreal* y, qreal distance) override {
-        qreal scaleFactor = (1.0 - distance) * m_factor + distance;
+        qreal scaleFactor = KisAlgebra2D::signPZ(m_factor) * (qAbs((1.0 - distance) * m_factor) + distance);
         *x = *x / scaleFactor;
         *y = *y / scaleFactor;
     }
